# Messing-Around-And-Finding-Out

./: .gitignore  CMakeLists.txt  main.c  shader.frag  shader.vert
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
